Change project and executable name to Periodic_Table

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.13)
-project(Periodic_Table_With_Cplusplus)
+project(Periodic_Table)
 
 set(CMAKE_CXX_STANDARD 14)
 
-project(Periodic_Table_With_Cplusplus)
+project(Periodic_Table)
 
 add_executable(
-    Periodic_Table_With_Cplusplus
+    Periodic_Table
     main.cpp
 )
